# RAG-AG_UI-COLE_MEDIN

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md
.claude/plans/: frontend-dark-theme-overhaul.md  interactive-rag-agent-useagent-demo.md
.devcontainer/: .dockerignore  Dockerfile  ENV_SETUP.md  README.md  devcontainer.json  docker-compose.yml  post-create.sh
agent/: .env.example  README.md  __init__.py  agent.py  dependencies.py  main.py  prompts.py  providers.py  pyproject.toml  settings.py  state.py  tools.py
agent/documents/: sample_docs.md
agent/ingestion/: __init__.py  chunker.py  ingest.py
agent/sql/: schema.sql
agent/tests/: __init__.py  test_chunker.py  test_state.py
agent/utils/: __init__.py  db_utils.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: ApprovalCard.tsx  ChunkCard.tsx  ChunksPanel.tsx  ConversationControls.tsx  SearchControls.tsx  SettingsPopover.tsx
frontend/src/types/: rag.ts
frontend/src/utils/: text.ts
